src/tenant-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: frontend-service
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  containers:
  - name: frontend-service
    image: docker.io/cilium/json-mock
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: backend-service
---
apiVersion: v1
kind: Pod
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  containers:
  - name: backend-service
    image: docker.io/cilium/json-mock
