src/allow-all-within-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: tenant-a
spec:
  podSelector: {}
  ingress:
    - {}
  egress:
    - {}
